// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.
//
// Copyright (c) DUSK NETWORK. All rights reserved.

syntax = "proto3";
package signer;

enum Error {
  BLS_INVALID_BYTES = 0;
  BLS_VERIFICATION_FAILED = 1;
  UNKNOWN = 2;
}

message GenerateKeysRequest{
}

message GenerateKeysResponse {
  bytes SecretKey = 1;
  bytes PublicKey = 2;
}

message SignRequest {
  bytes SecretKey = 1;
  bytes PublicKey = 2;
  bytes Message = 3;
}
message SignResponse {
  oneof sig {
    bytes Signature = 1;
    Error Error = 2;
  }
}

message VerifyRequest {
  bytes Apk = 1;
  bytes Signature = 2;
  bytes Message = 3;
}
message VerifyResponse {
  oneof ver {
    bool Valid = 1;
    Error Error = 2;
  }
}

message CreateAPKRequest {
  bytes PublicKey = 1;
}
message CreateAPKResponse {
  oneof apk {
    bytes APK = 1;
    Error Error = 2;
  }
}

message AggregatePKRequest {
  bytes APK = 1;
  repeated bytes Keys = 2;
}
message AggregateResponse {
  oneof agg {
    bytes Code = 1;
    Error Error = 2;
  }
}

message AggregateSigRequest {
  bytes Signature = 1;
  repeated bytes Signatures = 2;
}

service Signer {
  rpc GenerateKeys(GenerateKeysRequest) returns (GenerateKeysResponse);
  rpc Sign(SignRequest) returns (SignResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc CreateAPK(CreateAPKRequest) returns (CreateAPKResponse);
  rpc AggregatePK(AggregatePKRequest) returns (AggregateResponse);
  rpc AggregateSig(AggregateSigRequest) returns (AggregateResponse);
}
